--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,16 +1,26 @@
 name: Hello World Training Workflow
 
-on: push
-
-name: Cowsays
+on:
+  workflow_dispatch:
+  issues:
+    types: [opened, edited]
 
 jobs:
-  cow:
-    name: Cowsays
+  greet:
+    env:
+      MY_ENV: "John Doe"
+      SUPER_SECRET: ${{ secrets.SUPER_SECRET }}
     runs-on: ubuntu-latest
     steps:
-      - name: Ship it
+      - name: Greet the User
+        run: echo "Hello World!"
+      - name: Run a multi-line script
+        run: |
+          echo "Hello $MY_ENV"
+          echo "Hello $GITHUB_ACTOR"
+          echo "The secret is: $SUPER_SECRET"
+      - name: Love Actions
         uses: mscoutermarsh/cowsays-action@master
         with:
-          text: "ship ship ship!"
+          text: "I love actions!"
           color: "red"
